--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "LCN",
+  "name": "Blue Cross",
   "version": "1.0.0",
-  "description": "Find the help that speaks to you",
+  "description": "Rehome your doggo",
   "main": "index.js",
   "scripts": {
     "start": "node ./src/server/start",
