--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ AIRTABLE_BASE=2
 AIRTABLE_BASE_DEV=3
 AIRTABLE_BASE_TEST=4
 AIRTABLE_TABLE=5
+TEMPLATE_DIRECTORY=./src/email/templates
+SENDER_EMAIL_ADDRESS=mgerber94@gmail.com
+AWS_REGION=eu-west-1
+AWS_ACCESS_KEY_ID=AKIAJGUT34TBDCXKRHLQ
+AWS_SECRET_ACCESS_KEY=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
