--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "postcss-custom-media": "^6.0.0",
     "postcss-custom-properties": "^6.2.0",
     "postcss-import": "^11.0.0",
+    "sendemail": "^3.3.0",
     "tachyons-custom": "^4.9.0"
   }
 }
