photo accessible and viewing in  Elm #80

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-
+TEMPLATE_DIRECTORY=./src/email/templates
+SENDER_EMAIL_ADDRESS=mgerber94@gmail.com
+AWS_REGION=eu-west-1
+AWS_ACCESS_KEY_ID=AKIAJJECMZD4JGDW54VQ
+AWS_SECRET_ACCESS_KEY=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
+CLOUDINARY_URL=cloudinary://235996567292942:WpB6Tm00V6KvXrxgxrghQJNU6yM@hobbhuoli
