--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ AWS_REGION=eu-west-1
 AWS_ACCESS_KEY_ID=AKIAJJECMZD4JGDW54VQ
 AWS_SECRET_ACCESS_KEY=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
 CLOUDINARY_URL=cloudinary://235996567292942:WpB6Tm00V6KvXrxgxrghQJNU6yM@hobbhuoli
+CLOUDINARY_CLOUDNAME=hobbhuoli
+CLOUDINARY_API_KEY=235996567292942
+CLOUDINARY_API_SECRET=WpB6Tm00V6KvXrxgxrghQJNU6yM
