--- a/package.json
+++ b/package.json
@@ -7,20 +7,14 @@
     "start": "node ./src/server/start",
     "test": "NODE_ENV=test mocha ./tests/*  ",
     "test:watch": "NODE_ENV=test mocha ./tests/* --watch",
-    "elm-watch-debug":
-      "chokidar '**/*.elm' -c 'elm make src/elm/Main.elm --output=public/elm.js --debug'",
-    "elm-watch":
-      "chokidar '**/*.elm' -c 'elm make src/elm/Main.elm --output=public/elm.js'",
-    "just-frontend":
-      "elm-live src/elm/Main.elm --debug --output=public/elm.js --dir=public --open --pushstate & npm run css-watch",
-    "css-watch":
-      "postcss ./src/css/index.css --output ./public/style.min.css --watch --config ./postcss.config.js",
+    "elm-watch-debug": "chokidar '**/*.elm' -c 'elm make src/elm/Main.elm --output=public/elm.js --debug'",
+    "elm-watch": "chokidar '**/*.elm' -c 'elm make src/elm/Main.elm --output=public/elm.js'",
+    "just-frontend": "elm-live src/elm/Main.elm --debug --output=public/elm.js --dir=public --open --pushstate & npm run css-watch",
+    "css-watch": "postcss ./src/css/index.css --output ./public/style.min.css --watch --config ./postcss.config.js",
     "dev-frontend": "npm run elm-watch-debug & npm run css-watch",
     "dev-backend": "NODE_ENV=development nodemon ./src/server/start",
-    "css-build":
-      "postcss ./src/css/index.css --output ./public/style.min.css --config ./postcss.config.js",
-    "heroku-postbuild":
-      "npm run css-build; elm-make src/elm/Main.elm --output=public/elm.js --yes"
+    "css-build": "postcss ./src/css/index.css --output ./public/style.min.css --config ./postcss.config.js",
+    "heroku-postbuild": "npm run css-build; elm-make src/elm/Main.elm --output=public/elm.js --yes"
   },
   "repository": {
     "type": "git",
@@ -31,8 +25,7 @@
   "bugs": {
     "url": "https://github.com/InFact-coop/elm-express-airtable-starter/"
   },
-  "homepage":
-    "https://github.com/InFact-coop/elm-express-airtable-starter#readme",
+  "homepage": "https://github.com/InFact-coop/elm-express-airtable-starter#readme",
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
@@ -47,6 +40,7 @@
     "airtable": "^0.5.2",
     "autoprefixer": "^7.1.6",
     "body-parser": "^1.18.2",
+    "cloudinary": "^1.10.0",
     "elm": "^0.18.0",
     "express": "^4.16.2",
     "postcss-clean": "^1.1.0",
