--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "postcss-custom-properties": "^6.3.1",
     "postcss-import": "^11.1.0",
     "sendemail": "^3.4.0",
-    "tachyons-custom": "^4.9.4"
+    "tachyons-custom": "4.9.4"
   }
 }
