--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "body-parser": "^1.18.3",
     "cloudinary": "^1.11.0",
     "elm": "^0.18.0",
+    "elm-format": "^0.8.3",
     "express": "^4.16.3",
     "postcss-clean": "^1.1.0",
     "postcss-cli": "^4.1.1",
